--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -177,19 +177,31 @@ section{
         }
     }
     .cont{
-        display: grid;
-        grid-template-columns: 1.2fr 1fr;
-        min-height: 70vh;
-        .epics{
-            grid-column: 1/2;
+        display: flex;
+        flex-direction: column-reverse;
+        @include tablet{
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: 1.2fr 1fr;
+        }
+        .epics{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            @include tablet{
+                grid-column: 1/2;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+            }
             .educator{
                 display: flex;
+                margin: .5rem 0;
                 div{
                     display: flex;
                     flex-direction: column;
-                    justify-content: flex-end;
+                    justify-content: center;
+                    @include tablet{
+                        justify-content: flex-end;
+                    }
                 }
                 p{
                     line-height: .5;
@@ -215,11 +227,15 @@ section{
             }
         }
         #etext{
-            display: flex;
-            flex-direction: column;
-            grid-column: 2/3;
-            padding-left: 1.2rem;
-            text-align: right;
+            margin: .5rem 0 1.2rem 0;
+            text-align: center;
+            @include tablet{
+                padding-left: 1.2rem;
+                text-align: right;
+                display: flex;
+                flex-direction: column;
+                grid-column: 2/3;
+            }
             p{
                 font-size: .55rem;
             }
