--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -195,6 +195,10 @@ section{
             .educator{
                 display: flex;
                 margin: .5rem 0;
+                box-shadow: 0 0 25px -7px #eee;
+                width: 100%;
+                padding: .5rem;
+                padding-left: 1rem;
                 div{
                     display: flex;
                     flex-direction: column;
