--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -222,7 +222,7 @@ section{
                     width: 100px;
                     height: 100px;
                     border: 2px solid #cec000;
-                    margin-left: .45rem;
+                    margin-left: 1rem;
                     border-radius: 50%;
                     background-size: cover;
                     background-position: top;
