--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -199,6 +199,7 @@ section{
                 width: 100%;
                 padding: .5rem;
                 padding-left: 1rem;
+                border-radius: .5rem;
                 div{
                     display: flex;
                     flex-direction: column;
