--- a/pages/styles/mentors.css
+++ b/pages/styles/mentors.css
@@ -103,11 +103,16 @@ section .div {
 }
 
 #mentors {
-  background-image: url("/assets/mentor.svg");
   background-repeat: no-repeat;
   background-size: 18rem;
   background-position-y: bottom;
   min-height: 70vh;
+}
+
+@media screen and (min-width: 758px) {
+  #mentors {
+    background-image: url("/assets/mentor.svg");
+  }
 }
 
 #mentors .header {
@@ -115,18 +120,25 @@ section .div {
   background-position: right;
 }
 
-#mentors .cont {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1.5fr 2fr;
-      grid-template-columns: 1.5fr 2fr;
+@media screen and (min-width: 758px) {
+  #mentors .cont {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1.5fr 2fr;
+        grid-template-columns: 1.5fr 2fr;
+  }
 }
 
 #mentors .cont .mtext {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
-  text-align: right;
+}
+
+@media screen and (min-width: 758px) {
+  #mentors .cont .mtext {
+    text-align: right;
+  }
 }
 
 #mentors .cont .mtext p {
@@ -146,6 +158,7 @@ section .div {
 }
 
 #mentors .cont .mpics {
+  margin-top: 1rem;
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2/3;
@@ -159,12 +172,17 @@ section .div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  text-align: right;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0 1.2rem 1.2rem 1.2rem;
+  margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 758px) {
+  #mentors .cont .mpics .mentor {
+    margin: 0 1.2rem 1.2rem 1.2rem;
+  }
 }
 
 #mentors .cont .mpics .mentor .image {
@@ -175,6 +193,13 @@ section .div {
   background-position: top;
   border-radius: 50%;
   border: 3px solid midnightblue;
+}
+
+@media screen and (max-width: 758px) {
+  #mentors .cont .mpics .mentor .image {
+    margin: 0 auto;
+    margin-bottom: .5rem;
+  }
 }
 
 #mentors .cont .mpics .mentor p, #mentors .cont .mpics .mentor article {
@@ -189,8 +214,13 @@ section .div {
   background: url("../../assets/pattern-quotes.svg");
   background-size: 1.5rem;
   background-repeat: no-repeat;
-  padding: .4rem;
   padding-right: 0;
+}
+
+@media screen and (min-width: 758px) {
+  #mentors .cont .mpics .mentor article {
+    padding: .4rem;
+  }
 }
 
 #educators .header {
@@ -257,6 +287,13 @@ section .div {
   padding: .5rem;
   padding-left: 1rem;
   border-radius: .5rem;
+}
+
+@media screen and (min-width: 758px) {
+  #educators .cont .epics .educator {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
 }
 
 #educators .cont .epics .educator div {
