--- a/pages/styles/mentors.css
+++ b/pages/styles/mentors.css
@@ -63,15 +63,25 @@ section .div {
   background-color: navy;
   background-image: url("../../assets/bg.svg");
   background-repeat: no-repeat;
-  background-size: 50%;
+  background-size: 80%;
+  background-position: center;
   background-position-x: 110%;
   background-position-y: 70px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (min-width: 758px) {
+  #landing {
+    background-size: 50%;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
 }
 
 #landing #intro {
