--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -72,11 +72,16 @@ section{
     background-color: $bgcolor;
     background-image: url('../../assets/bg.svg');
     background-repeat: no-repeat;
-    background-size: 50%;
+    background-size: 80%;
+    background-position: center;
     background-position-x: 110%;
     background-position-y: 70px;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
+    @include tablet{
+        background-size: 50%;
+        align-items: flex-end;
+    }
     #intro{     
         margin-bottom: 2rem;
         h1{
