--- a/pages/styles/mentors.css
+++ b/pages/styles/mentors.css
@@ -72,6 +72,7 @@ section .div {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 80vh;
 }
 
 @media screen and (min-width: 758px) {
