--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -77,6 +77,7 @@ section{
     background-position-y: 70px;
     display: flex;
     align-items: center;
+    height: 80vh;
     @include tablet{
         background-size: 50%;
         align-items: flex-end;
