--- a/pages/styles/mentors.css
+++ b/pages/styles/mentors.css
@@ -72,7 +72,6 @@ section .div {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 80vh;
 }
 
 @media screen and (min-width: 758px) {
@@ -85,8 +84,10 @@ section .div {
   }
 }
 
-#landing #intro {
-  margin-bottom: 2rem;
+@media screen and (min-width: 758px) {
+  #landing #intro {
+    margin-bottom: 2rem;
+  }
 }
 
 #landing #intro h1 {
