--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -77,14 +77,15 @@ section{
     background-position-y: 70px;
     display: flex;
     align-items: center;
-    height: 80vh;
     @include tablet{
         background-size: 50%;
         align-items: flex-end;
         height: 100vh;
     }
-    #intro{     
-        margin-bottom: 2rem;
+    #intro{ 
+        @include tablet{
+            margin-bottom: 2rem;
+        }
         h1{
             color: #000;
             text-align: left;
