--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -74,6 +74,7 @@ section{
     background-size: 80%;
     background-position: center;
     background-position-x: 110%;
+    background-position-y: -70px;
     display: flex;
     align-items: center;
     margin-top: 70px;
