--- a/pages/styles/mentors.css
+++ b/pages/styles/mentors.css
@@ -64,8 +64,8 @@ section .div {
   background-repeat: no-repeat;
   background-size: 80%;
   background-position: center;
-  background-position-x: 110%;
-  background-position-y: -70px;
+  background-position-x: 115%;
+  background-position-y: -60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -82,6 +82,9 @@ section .div {
         -ms-flex-align: end;
             align-items: flex-end;
     height: 100vh;
+    margin-top: 0;
+    background-position-x: 110%;
+    background-position-y: 70px;
   }
 }
 
