--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -73,8 +73,8 @@ section{
     background-repeat: no-repeat;
     background-size: 80%;
     background-position: center;
-    background-position-x: 110%;
-    background-position-y: -70px;
+    background-position-x: 115%;
+    background-position-y: -60px;
     display: flex;
     align-items: center;
     margin-top: 70px;
@@ -82,6 +82,9 @@ section{
         background-size: 50%;
         align-items: flex-end;
         height: 100vh;
+        margin-top: 0;
+        background-position-x: 110%;
+        background-position-y: 70px;
     }
     #intro{ 
         @include tablet{
