--- a/pages/styles/mentors.css
+++ b/pages/styles/mentors.css
@@ -412,7 +412,7 @@ section .div {
 
 @media screen and (min-width: 758px) {
   #technicians .cont {
-    padding: 0 6rem;
+    padding: 0 .6rem;
   }
 }
 
@@ -438,7 +438,7 @@ section .div {
 
 @media screen and (min-width: 1020px) {
   #technicians .cont .item {
-    width: 20vw;
+    width: 25vw;
   }
 }
 
