--- a/styles/@imports/header.scss
+++ b/styles/@imports/header.scss
@@ -71,6 +71,7 @@ header{
                 padding: 0;
             }
             li{
+                font-weight: bold;
                 text-transform: uppercase;
                 margin: .8em 0;
                 padding: .5em 0;
