--- a/pages/styles/bootcamp.css
+++ b/pages/styles/bootcamp.css
@@ -151,6 +151,125 @@ section {
   margin: 1rem 0;
 }
 
+#learning-paths .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+#learning-paths .title h1 {
+  margin-left: .5rem;
+}
+
+#learning-paths #path-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#learning-paths #path-container #card {
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 25px -7px #dfdfdf;
+          box-shadow: 0 0 25px -7px #dfdfdf;
+  overflow: hidden;
+  margin: 0 .4rem;
+  width: 360px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 2fr .2fr .5fr .2fr;
+      grid-template-rows: 2fr .2fr .5fr .2fr;
+  -webkit-transition: all ease-in-out .3s;
+  transition: all ease-in-out .3s;
+}
+
+#learning-paths #path-container #card:hover {
+  margin-top: -20px;
+  -webkit-box-shadow: 0 5px 25px -5px #a7a7a7;
+          box-shadow: 0 5px 25px -5px #a7a7a7;
+  -webkit-transition: all ease-in-out .3s;
+  transition: all ease-in-out .3s;
+}
+
+#learning-paths #path-container #card p {
+  font-size: .45rem;
+}
+
+#learning-paths #path-container #card #bg {
+  min-height: 190px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  background-color: #e6d604;
+}
+
+#learning-paths #path-container #card .instructor {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: .5rem;
+}
+
+#learning-paths #path-container #card .instructor img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: .2rem;
+}
+
+#learning-paths #path-container #card .unit-title {
+  padding: 0 .5rem;
+}
+
+#learning-paths #path-container #card .unit-title p {
+  font-size: .8rem;
+}
+
+#learning-paths #path-container #card .bottom {
+  padding: .5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#learning-paths #path-container #card .bottom button {
+  color: #000080;
+  font-size: .4rem;
+  padding: .2rem;
+  background: transparent;
+  border: 2px solid #fff;
+  border-radius: 4px;
+}
+
+#learning-paths #path-container #card .bottom button:hover {
+  -webkit-transition: all ease-in-out .3s;
+  transition: all ease-in-out .3s;
+  background: #eee;
+  border: 2px solid #eee;
+}
+
 #projects {
   text-align: center;
 }
