--- a/pages/styles/bootcamp.scss
+++ b/pages/styles/bootcamp.scss
@@ -142,6 +142,83 @@ section{
         margin: 1rem 0;
     }
 }
+
+#learning-paths{
+    .title{
+        display: flex;
+        margin-bottom: 1rem;
+        h1{
+            margin-left: .5rem;
+        }
+    }
+    #path-container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        #card{
+            border-radius: 5px;
+            box-shadow: 0 0 25px -7px rgb(223, 223, 223);
+            overflow: hidden;
+            margin: 0 .4rem;
+            width: 360px;
+            display: grid;
+            grid-template-rows: 2fr .2fr .5fr .2fr;
+            transition: all ease-in-out .3s;
+            &:hover{
+                margin-top: -20px;
+                box-shadow: 0 5px 25px -5px rgb(167, 167, 167);
+                transition: all ease-in-out .3s;
+            }       
+            p{
+                font-size: .45rem;
+            }
+            #bg{
+                min-height: 190px;
+                grid-row: 1/2;
+                background-color: #e6d604;
+            }
+            .instructor{
+                grid-row: 2/3;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                padding: .5rem;
+                img{
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 50%;
+                    margin-right: .2rem;
+                }
+            }
+            .unit-title{
+                padding: 0 .5rem;
+                p{
+                    font-size: .8rem;
+                }
+            }
+            .bottom{
+                padding: .5rem;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                button{
+                    color: #000080;
+                    font-size: .4rem;
+                    padding: .2rem;
+                    background: transparent;
+                    border: 2px solid #fff;
+                    border-radius: 4px;
+                    &:hover{
+                        transition: all ease-in-out .3s;
+                        background: #eee;
+                        border: 2px solid #eee;
+                    }
+                }
+            }
+        }
+    }
+}
+
 #projects{
     text-align: center;
     h2{
