--- a/pages/styles/bootcamp.scss
+++ b/pages/styles/bootcamp.scss
@@ -155,15 +155,22 @@ section{
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
+        @include tablet{
+            flex-direction: column;
+        }
         #card{
+            width: 100%;
             border-radius: 5px;
             box-shadow: 0 0 25px -7px rgb(223, 223, 223);
             overflow: hidden;
-            margin: 0 .4rem;
-            width: 360px;
+            margin: .5rem .4rem;
             display: grid;
             grid-template-rows: 2fr .2fr .5fr .2fr;
             transition: all ease-in-out .3s;
+            @include tablet{
+                width: 360px;
+            }
             &:hover{
                 margin-top: -20px;
                 box-shadow: 0 5px 25px -5px rgb(167, 167, 167);
