--- a/pages/styles/bootcamp.css
+++ b/pages/styles/bootcamp.css
@@ -180,10 +180,10 @@ section {
 
 @media screen and (min-width: 758px) {
   #learning-paths #path-container {
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
@@ -257,7 +257,7 @@ section {
 }
 
 #learning-paths #path-container #card .unit-title p {
-  font-size: .8rem;
+  font-size: .6rem;
 }
 
 #learning-paths #path-container #card .bottom {
