--- a/pages/styles/learn.css
+++ b/pages/styles/learn.css
@@ -153,7 +153,7 @@ main {
 }
 
 #learning-paths #path-container #card .unit-title {
-  padding: 0 .5rem;
+  padding: .2rem .5rem;
 }
 
 #learning-paths #path-container #card .bottom {
