--- a/pages/styles/learn.scss
+++ b/pages/styles/learn.scss
@@ -119,7 +119,7 @@ main{
                 }
             }
             .unit-title{
-                padding: 0 .5rem;
+                padding: .2rem .5rem;
             }
             .bottom{
                 padding: .5rem;
