--- a/pages/styles/learn.scss
+++ b/pages/styles/learn.scss
@@ -119,10 +119,11 @@ main{
                 }
             }
             .unit-title{
-                padding: .2rem .5rem;
+                padding: .4rem .5rem;
             }
             .bottom{
                 padding: .5rem;
+                padding-top: 0;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
