--- a/pages/styles/learn.scss
+++ b/pages/styles/learn.scss
@@ -109,6 +109,7 @@ main{
                 flex-direction: row;
                 align-items: center;
                 padding: .5rem;
+                font-size: .8rem;
                 img{
                     width: 45px;
                     height: 45px;
