--- a/pages/styles/learn.scss
+++ b/pages/styles/learn.scss
@@ -109,7 +109,9 @@ main{
                 flex-direction: row;
                 align-items: center;
                 padding: .5rem;
-                font-size: .6rem;
+                p{
+                    font-size: .6rem;
+                }
                 img{
                     width: 45px;
                     height: 45px;
