--- a/pages/styles/learn.scss
+++ b/pages/styles/learn.scss
@@ -120,6 +120,7 @@ main{
                 }
             }
             .unit-title{
+                font-weight: 700;
                 padding: .4rem .5rem;
             }
             .bottom{
