--- a/pages/styles/learn.scss
+++ b/pages/styles/learn.scss
@@ -62,6 +62,7 @@ main{
     }
     .title{
         display: flex;
+        padding: .8rem 0;
         @include tablet{
             margin: 0 .5rem;
         }
