--- a/pages/styles/learn.scss
+++ b/pages/styles/learn.scss
@@ -43,6 +43,7 @@ section{
     padding: .5rem 1.2rem;
 }
 header{
+    padding: 0 1.2rem;
     height: 70px;
     border-bottom: 1px solid #eee;
     width: 100%;
@@ -51,6 +52,11 @@ header{
     top: 0;
     left: 0;
     background-color: #fff;
+    display: flex;
+    align-items: center;
+    h1{
+        font-size: 1rem;
+    }
 }
 main{
     padding-top: 70px;
