--- a/pages/styles/learn.css
+++ b/pages/styles/learn.css
@@ -25,6 +25,7 @@ section {
 }
 
 header {
+  padding: 0 1.2rem;
   height: 70px;
   border-bottom: 1px solid #eee;
   width: 100%;
@@ -33,6 +34,16 @@ header {
   top: 0;
   left: 0;
   background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header h1 {
+  font-size: 1rem;
 }
 
 main {
