--- a/pages/styles/cda.css
+++ b/pages/styles/cda.css
@@ -26,14 +26,19 @@ section {
 
 #nav_items #register {
   border: 2px solid #eee;
-  border-radius: 2em;
   padding: 5px 15px;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   margin: auto 0;
-  margin-left: 1.2em;
   background-color: #e6d604;
+}
+
+@media screen and (min-width: 758px) {
+  #nav_items #register {
+    margin-left: 1.2em;
+    border-radius: 2em;
+  }
 }
 
 #nav_items #register:hover::before {
@@ -57,10 +62,15 @@ main #barner {
 main #a {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1.2fr 1fr;
-      grid-template-columns: 1.2fr 1fr;
-  -ms-grid-rows: .5fr 1fr;
-      grid-template-rows: .5fr 1fr;
+}
+
+@media screen and (min-width: 758px) {
+  main #a {
+    -ms-grid-columns: 1.2fr 1fr;
+        grid-template-columns: 1.2fr 1fr;
+    -ms-grid-rows: .5fr 1fr;
+        grid-template-rows: .5fr 1fr;
+  }
 }
 
 main #a article {
@@ -79,10 +89,15 @@ main #b {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1.1fr;
-      grid-template-columns: 1fr 1.1fr;
+}
+
+@media screen and (min-width: 758px) {
+  main #b {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1.1fr;
+        grid-template-columns: 1fr 1.1fr;
+  }
 }
 
 main #b article {
@@ -103,11 +118,13 @@ main #b article button {
   border-radius: .12rem;
 }
 
-main #c {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1.2fr 1fr;
-      grid-template-columns: 1.2fr 1fr;
+@media screen and (min-width: 758px) {
+  main #c {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1.2fr 1fr;
+        grid-template-columns: 1.2fr 1fr;
+  }
 }
 
 main #c article {
@@ -129,10 +146,15 @@ main #c article button {
 main #d {
   padding: 3rem 1.2rem;
   background-color: #f5f6fa;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+}
+
+@media screen and (min-width: 758px) {
+  main #d {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
 }
 
 main #d #title {
